[package]
name = "evdev-proxy"
version = "0.1.0"
authors = ["rr"]
edition = "2018"

#[profile.release]
#opt-level = 'z'
#lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
udev = "0.5.0"
input-linux = "0.3.0"
nix = "0.19.0"
pretty_env_logger = "0.4.0"
log = "0.4.11"
crossbeam = "0.8.0"
config = "0.10.1"
serde = "1.0.117"
serde_derive = "1.0.117"
